# h4ckrth0n

./: .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml  renovate.json
.Jules/: palette.md
.github/workflows/: ci.yml  publish.yml
.jules/: atlas.md
alembic/: env.py
alembic/versions/: 0001_rename_nickname_to_name.py
docs/: index.md  passkeys.md
docs/architecture/: overview.md
docs/auth/: device-jwt.md  passkeys.md  password.md
docs/authz/: rbac.md
docs/database/: migrations.md
docs/llm/: index.md
docs/observability/: index.md
docs/openapi/: index.md
docs/security/: frontend.md
examples/: quickstart.py
h4ckrth0n/: __init__.py  app.py
scripts/: apply_versions.py  bump_version.py  check_doc_routes.py  compute_versions.py
src/h4ckath0n/: __init__.py  __main__.py  app.py  cli.py  config.py  version.py
src/h4ckath0n/auth/: __init__.py  dependencies.py  jwt.py  models.py  passwords.py  router.py  schemas.py  service.py
src/h4ckath0n/auth/passkeys/: __init__.py  ids.py  router.py  schemas.py  service.py  webauthn.py
src/h4ckath0n/db/: __init__.py  base.py  engine.py  session.py
src/h4ckath0n/db/migrations/: __init__.py  env.py  runtime.py
src/h4ckath0n/db/migrations/versions/: 0001_initial_schema.py  0001_rename_nickname_to_name.py  0002_rename_nickname_to_name.py
src/h4ckath0n/llm/: __init__.py  client.py  types.py
src/h4ckath0n/obs/: __init__.py  redaction.py  settings.py  setup.py  wrappers.py
src/h4ckath0n/realtime/: __init__.py  auth.py  sse.py
src/h4ckrth0n/: app.py  config.py
src/h4ckrth0n/auth/: models.py  router.py  service.py
src/h4ckrth0n/auth/passkeys/: __init__.py  ids.py  router.py  schemas.py  service.py  webauthn.py
tests/: conftest.py  test_cli.py  test_integration.py  test_migrations_runtime.py  test_passkeys.py  test_realtime.py  test_redaction.py  test_schema.py
